implement policy manager
